--- a/delivery/requirements.txt
+++ b/delivery/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.5.2
+celery==5.2
 Django==4.1.8
 django-filter==2.4.0
 djangorestframework==3.13.1
 drf-yasg==1.21.3
+eventlet==0.33.3
+flower==1.2.0
 geopy==2.3.0
 gunicorn==20.0.4
 psycopg2-binary==2.9.4
@@ -12,6 +15,7 @@ pytest-pythonpath==0.7.3
 pytz==2021.3
 sqlparse==0.3.1
 requests==2.26.0
+redis==4.5.4
 python-dotenv==1.0.0
 flake8==5.0.4
 flake8-isort==6.0.0
